# ckanext-better-stats

./: .gitignore  404.html  IMPLEMENTATION_PLAN.md  MANIFEST.in  README.md  gulpfile.js  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  setup.cfg  sitemap.xml  terser.config.json  test.ini  tsconfig.json
.github/workflows/: test.yml
ckanext/better_stats/: cache.py  const.py  helpers.py  model.py  plugin.py  search.py  views.py
ckanext/better_stats/assets/: webassets.yml
ckanext/better_stats/assets/css/: style.css  style.css.map  styles.css
ckanext/better_stats/assets/js/: bstats-settings.js  bstats-stats-manager.js  bstats-stats-manager.min.js  bstats-stats-manager.ts  bstats.min.js
ckanext/better_stats/assets/theme/: _badge.scss  _buttons.scss  _card.scss  _dark.scss  _embed.scss  _global.scss  _grid.scss  _settings.scss  _skeleton.scss  _variables.scss  _viz.scss  readme.txt  styles.scss
ckanext/better_stats/assets/ts/: bstats-embed.ts  bstats-entry.ts  bstats-expand.ts  bstats-export.ts  bstats-favorite.ts  bstats-filter.ts  bstats-settings.ts  bstats-stats-manager.ts  bstats-theme.ts  bstats-types.ts
ckanext/better_stats/logic/: action.py  auth.py  schema.py
ckanext/better_stats/metrics/: __init__.py  base.py  dataset_metrics.py  organization_metrics.py  portal_metrics.py  system_metrics.py
ckanext/better_stats/migration/better_stats/: alembic.ini  env.py
ckanext/better_stats/migration/better_stats/versions/: 001_b512650591d4_add_better_stats_metric_config_table.py  003_d4e5f6a7b8c9_timezone_aware_datetimes.py  004_e5f6a7b8c9d0_rename_order_column.py  b512650591d4_add_better_stats_metric_config_table.py  c3d4e5f6a7b8_add_better_stats_user_favorite_table.py
ckanext/better_stats/templates/: header.html  page.html
ckanext/better_stats/templates/better_stats/: dashboard.html  dashboard_content.html  embed.html  embed_modal.html  metric_card.html  page.html  settings.html  settings_group.html
ckanext/better_stats/tests/: conftest.py  test_auth.py  test_cache.py  test_helpers.py  test_logic.py  test_model.py  test_search.py  test_views.py
ckanext/better_stats/tests/e2e/: conftest.py  test_dashboard.py  test_settings.py
ckanext/better_stats/tests/test_metrics/: test_base.py  test_dataset_metrics.py  test_organization_metrics.py  test_portal_metrics.py  test_system_metrics.py
ckanext/better_stats/theme/: embed.scss  grid.scss  header.scss  metric.scss  readme.txt  styles.scss
ckanext/better_stats/views/: __init__.py  dashboard.py  settings.py
custom_metrics/: index.html
docs/: custom_metrics.md  install.md  main.py  metrics.md
docs/metrics/: dataset.md  index.md  organization.md  system.md  user.md
docs/signals/: before_metric_render.md  register_metrics.md
install/: index.html
metrics/: index.html
metrics/dataset/: index.html
metrics/organization/: index.html
metrics/system/: index.html
metrics/user/: index.html
search/: search_index.json
signals/before_metric_render/: index.html
signals/register_metrics/: index.html
test_config/: default.ini  test.ini
