[project]
name = "ckanext-better-stats"
version = "0.0.1"
description = "Flexible CKAN extension for defining and displaying custom metrics with support for caching, access control, and multiple output formats"
readme = "README.md"
authors = [
    { name = "Oleksandr Cherniavskiy", email = "cherniavskyi.alexandr@linkdigital.com.au" },
]
license = { text = "AGPL" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

keywords = ["CKAN"]
dependencies = [
    "psutil>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/DataShades/ckanext-better-stats"

[project.entry-points."ckan.plugins"]
better_stats = "ckanext.better_stats.plugin:BetterStatsPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"

[tool.ruff]
line-length = 127
target-version = "py310"

select = [
    "B",   # likely bugs and design problems
    "BLE", # do not catch blind exception
    "C40", # better list/set/dict comprehensions
    "C90", # check McCabe complexity
    "COM", # trailing commas
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "G",   # format strings for logging statements
    "N",   # naming conventions
    "PL",  # pylint
    "PT",  # pytest style
    "PIE", # misc lints
    "Q",   # preferred quoting style
    "RET", # improvements for return statements
    "RSE", # improvements for rise statements
    # "S",  # security testing
    "SIM", # simplify code
    "T10", # debugging statements
    "T20", # print statements
    "TID", # tidier imports
    "TRY", # better exceptions
    "UP",  # upgrade syntax for newer versions of the language
]
ignore = []

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.isort]
known_ckan = "ckan"
known_ckanext = "ckanext"
known_self = "ckanext.better_stats"
sections = "FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY,CKAN,CKANEXT,SELF,LOCALFOLDER"
profile = "black"

[tool.pyright]
pythonVersion = "3.10"
include = ["ckanext"]
exclude = ["**/test*", "**/migration"]
strict = []

strictParameterNoneValue = true
reportFunctionMemberAccess = true          # non-standard member accesses for functions
reportMissingImports = true
reportMissingModuleSource = true
reportMissingTypeStubs = false
reportImportCycles = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = false   # Context won't work with this rule
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportOverlappingOverload = true
reportUntypedFunctionDecorator = false
reportUnknownParameterType = true
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportMissingTypeArgument = true
reportInvalidTypeVarUse = true
reportCallInDefaultInitializer = true
reportUnknownVariableType = true
reportUntypedBaseClass = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportUnusedCallResult = false             # allow function calls for side-effect only
useLibraryCodeForTypes = true
reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
reportWildcardImportFromLibrary = true
reportUntypedClassDecorator = false
reportUntypedNamedTuple = true
reportPrivateUsage = true
reportPrivateImportUsage = true
reportInconsistentConstructor = true
reportMissingSuperCall = false
reportUninitializedInstanceVariable = true
reportInvalidStringEscapeSequence = true
reportMissingParameterType = true
reportImplicitStringConcatenation = false
reportUndefinedVariable = true
reportUnboundVariable = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUnsupportedDunderAll = true
reportUnusedCoroutine = true
reportUnnecessaryTypeIgnoreComment = true
reportMatchNotExhaustive = true
