[project]
name = "ckanext-better-stats"
version = "0.0.1"
description = "Flexible CKAN extension for defining and displaying custom metrics with support for caching, access control, and multiple output formats"
readme = "README.md"
authors = [
    { name = "Oleksandr Cherniavskiy", email = "cherniavskyi.alexandr@linkdigital.com.au" },
]
license = { text = "AGPL" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

keywords = ["CKAN"]
dependencies = [
    "psutil>=7.0.0",
]

[project.optional-dependencies]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "mkdocstrings-python", "mkdocs-macros-plugin"]



[project.urls]
Homepage = "https://github.com/DataShades/ckanext-better-stats"

[project.entry-points."ckan.plugins"]
better_stats = "ckanext.better_stats.plugin:BetterStatsPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
       "ANN0", # type annotations for function arguments
       "B",  # likely bugs and design problems
       "BLE",  # do not catch blind exception
       "C4",  # better list/set/dict comprehensions
       "C90",  # check McCabe complexity
       # "DTZ", # enforce timezone in date objects
       "E",  # pycodestyle error
       "W",  # pycodestyle warning
       "F",  # pyflakes
       "FA", # verify annotations from future
       "G",  # format strings for logging statements
       "N",  # naming conventions
       "I",  # isort
       "ICN", # import conventions
       # "D1",  # require doc
       "D2",  # doc formatting
       "D4",  # doc convention
       "PL",  # pylint
       "PERF", # performance anti-patterns
       "PT",  # pytest style
       # "PTH", # replace os.path with pathlib
       "PIE",  # misc lints
       "RET",  # improvements for return statements
       "RSE",  # improvements for rise statements
       "S",  # security testing
       "SIM",  # simplify code
       "T10",  # debugging statements
       "T20",  # print statements
       "TID",  # tidier imports
       "TRY",  # better exceptions
       "UP",  # upgrade syntax for newer versions of the language
]

ignore = [
       "E712", # comparison to bool: violated by SQLAlchemy filters
       "PLC1901", # simplify comparison to empty string: violated by SQLAlchemy filters
       "RET503", # don't enforce return-None
       "PLW2901", # loop variables can shadow outer variables
       "TRY003", # allow specify exception message
]

[tool.ruff.lint.per-file-ignores]
"ckanext/**/tests*" = ["S", "PL", "ANN", "S101"]
"ckanext/**/migration*" = ["ANN001", "D415"]
"ckanext/**/logic/schema*" = ["PLR0913"]

[tool.ruff.lint.flake8-import-conventions.aliases]
"ckan.plugins" = "p"
"ckan.plugins.toolkit" = "tk"
sqlalchemy = "sa"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = [
              "future",
              "standard-library",
              "first-party",
              "third-party",
              "ckan",
              "ckanext",
              "self",
              "local-folder",
]

[tool.ruff.lint.isort.sections]
ckan = ["ckan"]
ckanext = ["ckanext"]
self = ["ckanext.better_stats"]
